Fix Cast Streaming regression caused by enabling H264 HW encoder on Mac.

A recent commit (ef3bf83045bd0a54317de8ee3cdd32687f09ab12 [formerly 3956fa1cac34dd5682c271d77463accdd7191102]) turned on
detection and use of the H264 hardware encoder for Mac desktop.  This
caused breakage in the form of a "black screen."  This change reverts to
the prior behavior of always using the software VP8 encoder on Macs.

BUG=596674

Review URL: https://codereview.chromium.org/1818203002

Cr-Commit-Position: refs/heads/master@{#382432}

Former-commit-id: 5f6bf2ab1d3619432d6d0a5021008d500b7e1c37